--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -12,7 +12,8 @@
       <div class="col s12 m12 l6 xl6">
         <div class="divider"></div>
         <div class="section">
-          <h4 class="center-align"><i class="material-icons">home</i>{{neighborhood.neighborhood_name}}</h4>
+          <h4 class="center-align" style="color: white;"><i
+              class="material-icons">home</i>{{neighborhood.neighborhood_name}}</h4>
         </div>
       </div>
     </a>
@@ -37,13 +38,14 @@
 <!-- Intro Dashboard -->
 {% if user.neighborhood == null and request.user.id != 1 %}
 <div class="container">
-  <h3 class="center-align text-white">What Neighborhood Do You Belong To?</h3>
+  <h3 class="center-align text-white">Select Your neighborhood</h3>
   <div class="row">
     {% for neighborhood in neighborhoods %}
     <div class="divider"></div>
     <div class="section text-white">
-      <a href="{% url 'neighborhood' neighborhood.id %}" class="btn-floating" style="background-color:#52A8A8!important;"><i class="material-icons">check</i></a>
-      <h4 class="center-align"><i class="material-icons">home</i>{{neighborhood.neighborhood_name}}</h4>
+      <a href="{% url 'neighborhood' neighborhood.id %}" class="btn-floating"
+        style="background-color:#52A8A8!important;"><i class="material-icons">place</i></a>
+      <h4 class="center-align"><i class="material-icons"></i>{{neighborhood.neighborhood_name}}</h4>
     </div>
     {% endfor %}
   </div>
