--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -2,7 +2,7 @@
   <nav class=" black  darken-3">
     <div class="nav-wrapper">
       <div class="container-fluid">
-        <a class="brand-logo" href="/"><i class="material-icons">home</i>kanairo</a>
+        <a class="brand-logo" href=""><i class="material-icons">home</i>kanairo</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">Menu</i></a>
         <ul class="right hide-on-med-and-down">
           <!-- Administrator's Navbar -->
