added a login file

--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -11,7 +11,7 @@
       {% endif %}
       <div class="card #52A8A8 darken-1">
         <div class="card-content">
-          <span class="card-title center-align">Sign In To Neighborhood</span>
+          <span class="card-title center-align">Sign In To Kanairo</span>
         </div>
         <div class="card-content">
           <form action="/accounts/login/" method="POST">
