--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -26,7 +26,7 @@
   {% endblock %}
 </head>
 
-<body style="background-image: url(https://images.unsplash.com/photo-1485568839169-4d3c0ce7f50f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OTd8fG5laWdoYm9yaG9vZCUyMHNsdW1zJTIwYmFja2dyb3VuZCUyMGltYWdlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);">
+<body style="background-image: url(https://images.unsplash.com/photo-1478428036186-d435e23988ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXwxMTEyODQ1fHxlbnwwfHx8fA%3D%3D&w=1000&q=80);">
   {% include 'navbar.html' %}
   {% block content %}
   {% endblock %}
