--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -46,7 +46,7 @@
       <div class="divider"></div>
       <div class="section text-white">
         <a href="{% url 'neighborhood' neighborhood.id %}" class="btn-floating"
-          style="background-color:#34d4d4!important;"><i class="material-icons">place</i></a>
+          style="background-color:#319737!important;"><i class="material-icons">place</i></a>
         <h4 class="center-align"><i class="material-icons"></i>{{neighborhood.neighborhood_name}}</h4>
       </div>
       {% endfor %}
