--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -38,7 +38,7 @@
 <!-- Intro Dashboard -->
 {% if user.neighborhood == null and request.user.id != 1 %}
 <div class="container">
-  <h3 class="center-align text-white" style="font-size: xx-large; font-family: Luna; font-weight: bold; font-style: oblique; color: black;">Select Your neighborhood</h3>
+  <h3 class="center-align text-white" style="font-size: xx-large; font-family: Luna; font-weight: bold; font-style: oblique;">SELECT YOUR NEIGHBOURHOOD</h3>
   <div class="row">
 
     <div class="col-sm">
