updated the modal

--- a/home/templates/neighborhood.html
+++ b/home/templates/neighborhood.html
@@ -91,7 +91,7 @@
             <!-- Post Form Modal -->
             <div id="modal3" class="modal">
               <div class="modal-content">
-                <h4 class="center-align">Post Alert/Meeting</h4>
+                <h4 class="center-align">Post Your message</h4>
                 <div class="divider"></div>
                 <form action="{% url 'neighborhood' neighborhood.id %}" method="POST">
                   {% csrf_token %}
